fixed dumb "/..." link thing

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <meta property="og:title" content="Make calm music by dragging friendly animals • Alien Relaxation Station">
   <meta property="og:description" content="Alien Relaxation Station is a chill, tactile music toy for iPhone. Drag animals to shape melodies, loops, and soothing patterns—no music theory needed.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{SITE_ORIGIN}}/">
-  <meta property="og:image" content="{{SITE_ORIGIN}}/assets/img/og-image.png">
+  <meta property="og:url" content="https://echomeinc.github.io/AlienRelaxationStation/">
+  <meta property="og:image" content="https://echomeinc.github.io/AlienRelaxationStation/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="/assets/img/favicon.svg">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="icon" href="assets/img/favicon.svg">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <div class="container">
   <nav class="nav" aria-label="Primary">
-    <a class="brand" href="/"><span aria-hidden="true">🛸</span> Alien Relaxation Station</a>
+    <a class="brand" href="./"><span aria-hidden="true">🛸</span> Alien Relaxation Station</a>
     <div class="links">
-      <a href="/#features">Features</a>
-      <a href="/#how">How it works</a>
-      <a href="/#faq">FAQ</a>
-      <a href="/support.html">Support</a>
+      <a href="#features">Features</a>
+      <a href="#how">How it works</a>
+      <a href="#faq">FAQ</a>
+      <a href="support.html">Support</a>
       <a href="https://apps.apple.com/app/idYOUR_APP_ID" class="btn">View on App Store</a>
     </div>
   </nav>
@@ -34,14 +34,14 @@
         <p class="lead">Tap, drag, and loop. That’s it. Alien Relaxation Station turns simple gestures into soothing melodies—relaxing, creative, and delightfully approachable.</p>
         <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
           <a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID">View on App Store</a>
-          <a class="btn secondary" href="/support.html">Get Support</a>
+          <a class="btn secondary" href="support.html">Get Support</a>
         </div>
         <div class="notice" style="margin-top:14px">
           <strong>We respect your privacy.</strong> ARS collects <em>no</em> personal data and uses no third‑party analytics or ads.
         </div>
       </div>
       <figure class="kv card" aria-label="App preview">
-        <img src="/assets/img/ars-icon.jpeg" alt="Alien Relaxation Station Icon" />
+        <img src="assets/img/ars-icon.jpeg" alt="Alien Relaxation Station Icon" />
       </figure>
     </div>
   </header>
@@ -97,14 +97,14 @@
         <p class="lead">A playful way to make calming music—no theory required.</p>
         <div class="badges">
           <a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID">App Store</a>
-          <a class="btn secondary" href="/support.html">Support</a>
+          <a class="btn secondary" href="support.html">Support</a>
         </div>
       </div>
       <div>
         <h3>Company</h3>
         <ul class="clean">
-          <li><a href="/privacy.html">Privacy Policy</a></li>
-          <li><a href="/terms.html">Terms of Use</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
           <li><a href="mailto:amar@alienemoji.com">Contact</a></li>
         </ul>
       </div>
@@ -112,8 +112,8 @@
         <h3>Meta</h3>
         <ul class="clean">
           <li><a href="https://github.com/YOUR_GITHUB_USERNAME/alien-relaxation-station-site">Source on GitHub</a></li>
-          <li><a href="/sitemap.xml">Sitemap</a></li>
-          <li><a href="/robots.txt">Robots.txt</a></li>
+          <li><a href="sitemap.xml">Sitemap</a></li>
+          <li><a href="robots.txt">Robots.txt</a></li>
         </ul>
       </div>
     </div>
