--- a/privacy.html
+++ b/privacy.html
@@ -11,25 +11,25 @@
   <meta property="og:url" content="{{SITE_ORIGIN}}/privacy.html">
   <meta property="og:image" content="{{SITE_ORIGIN}}/assets/img/og-image.png">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="/assets/img/favicon.svg">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="icon" href="assets/img/favicon.svg">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 <div class="container">
   <nav class="nav" aria-label="Primary">
-    <a class="brand" href="/"><span aria-hidden="true">🛸</span> Alien Relaxation Station</a>
+    <a class="brand" href="./"><span aria-hidden="true">🛸</span> Alien Relaxation Station</a>
     <div class="links">
-      <a href="/#features">Features</a>
-      <a href="/#how">How it works</a>
-      <a href="/#faq">FAQ</a>
-      <a href="/support.html">Support</a>
+      <a href="#features">Features</a>
+      <a href="#how">How it works</a>
+      <a href="#faq">FAQ</a>
+      <a href="support.html">Support</a>
       <a href="https://apps.apple.com/app/idYOUR_APP_ID" class="btn">View on App Store</a>
     </div>
   </nav>
 
   <header class="header">
     <h1>Privacy Policy</h1>
-    <p class="breadcrumbs"><a href="/">Home</a> › Privacy Policy</p>
+    <p class="breadcrumbs"><a href="./">Home</a> › Privacy Policy</p>
   </header>
 
   <section>
@@ -56,14 +56,14 @@
         <p class="lead">A playful way to make calming music—no theory required.</p>
         <div class="badges">
           <a class="btn" href="https://apps.apple.com/app/idYOUR_APP_ID">App Store</a>
-          <a class="btn secondary" href="/support.html">Support</a>
+          <a class="btn secondary" href="support.html">Support</a>
         </div>
       </div>
       <div>
         <h3>Company</h3>
         <ul class="clean">
-          <li><a href="/privacy.html">Privacy Policy</a></li>
-          <li><a href="/terms.html">Terms of Use</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+          <li><a href="terms.html">Terms of Use</a></li>
           <li><a href="mailto:amar@alienemoji.com">Contact</a></li>
         </ul>
       </div>
@@ -71,8 +71,8 @@
         <h3>Meta</h3>
         <ul class="clean">
           <li><a href="https://github.com/YOUR_GITHUB_USERNAME/alien-relaxation-station-site">Source on GitHub</a></li>
-          <li><a href="/sitemap.xml">Sitemap</a></li>
-          <li><a href="/robots.txt">Robots.txt</a></li>
+          <li><a href="sitemap.xml">Sitemap</a></li>
+          <li><a href="robots.txt">Robots.txt</a></li>
         </ul>
       </div>
     </div>
